src/App.css
body {
  font-family: 'Montserrat', sans-serif;
}

#header {

}

#root>div {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

#footer {
  margin-bottom: 24px; 
  margin-left: 240px; 
  flex: 0 1 auto;
}

#main {
  margin-left: 0;
  margin-top: 60px;
  padding-left: 240px;
  flex: 1;
}

.Logo img {
  cursor: pointer;
  height: 60px;
}

.HeaderNav {
  position: fixed;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 60px;
}

.HeaderNav {
  background-color: white;
  box-shadow: none;
}

.HeaderNav .brand-logo {
  color: black;
}

.HeaderNav .side-nav-trigger {
  color: black;
  cursor: pointer;
}

.HeaderNav .side-nav-trigger:hover {
  background-color: rgba(38, 38, 38, .15);
}

.HeaderNav .side-nav-trigger span {
  padding: 0 32px;
}

.SideNav {
  z-index: 10;
  background-color: white;
  margin-top: 60px;
  padding: 65px 15px;
  position: fixed;
  top: 0;
  bottom: 0;
  width: 240px;
  height: auto;
  overflow-x: hidden;
  overflow-y: auto;
}

.top-nav,
.bottom-nav {
  padding-left: 40px;
}

.bottom-nav {
  position: absolute;
  bottom: 0;
  padding-bottom: 60px;
}

.shop-links {
  padding-top: 20px;
}

.shop-links .shop-link-header {
  font-size: 24px;
}

.shop-links ul {
  border-left: 2px solid #ddd;
}

.shop-links a {
  color: black;
}

.page-links ul li {
  font-size: 14px;
  padding: 4px 0px;
}

.page-links a {
  color: #999;
}

.shop-links ul li {
  font-size: 14px;
  padding: 4px 16px;
}

.social-media-links a  {
  color: #999;
  padding-right: 8px;
  display: inline-block;
  transition: .5s;
}

.social-media-links:hover a {
  color: #ccc;
}

.social-media-links:hover a:hover {
  color: #999;
}

.Home {
  padding: 72px;
}

.About {
  padding: 0% 20%;
}

.Contact {
  padding: 0% 20%;
}

.About .about-text {
  font-size: 16px;
}

.About .block-center {
  width: 75%;
}

.SimpleCard {
  text-align: center;
}

.SimpleCard {
  color: black;
}

.SimpleCard .card-panel {
  background-color: #f3f3f3;
}

.OverlayCard {
  position: relative;
}

.simple-card-overlay {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: transparent;
  transition: .3s;
  text-align: center;
}

.simple-card-overlay:hover {
  background-color: rgba(255, 255, 255, .95);
  transition: .3s;
}

.simple-card-overlay .overlay-text {
  position: relative;
  top: 45%;
  width: 50%;
  margin: auto;
  display: none;
}

.simple-card-overlay:hover .overlay-text {
  display: block;
}

.overlay-text .overlay-title {
  display: block;
  font-weight: 600; 
}

.overlay-text .overlay-subtitle {
  color: #999;
  font-weight: 600; 
}

.SimpleCarousel {
  background-color: #f3f3f3;
}

a.highlight-link {
  color: red;
}

img.cover-image {
  width: 100%;
  background-size: cover;
  background-position: center;
}

img.carousel-image {
  max-height: 75vh;
  padding: 35px;
}

.block-center {
  margin: auto;
  width: 50%;
}

/* Mobile */
@media screen and (min-width: 1025px) {
  #main,
  .SideNav {
    margin-top: 0px;
  }
  .HeaderNav {
    display: none;
  }
}

@media screen and (max-width: 1024px) {
  #main {
    padding-left: 0px;
  }
  #footer {
    margin-left: 0px;
  }
  .SideNav {
    display: none;
  }
  .SideNav .Logo {
    display: none;
  }
  .SideNav .bottom-nav {
    bottom: initial;
  }
  .SideNavMobile {
    display: block;
    padding: 0;
  }
  img.carousel-image {
    width: 100%;
    max-height: none;
  }
}

